[package]
name = "example-kv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = "0.9.2"
tonic = "0.9.2"
tokio = { version = "1", features = ["full"] }
grpc_proto = {path = "grpc_proto"}
prost = "0.11.9"
redis = "0.23.0"
log = "0.4.18"
env_logger = "0.10.0"
hyper = "0.14.26"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tonic-reflection = "0.9.2"

[dev-dependencies]
clippy = "0.0.302"